src/AppBundle/Resources/public/css/style.css
body {
    padding-top: 70px;
    padding-bottom: 30px;
}

.single_project .jumbotron p {
    font-size: 17px;
}

body.login {
    padding-top: 40px;
    padding-bottom: 40px;
    background-color: #eee;
}

body.login form {
    max-width: 330px;
    padding: 15px;
    margin: 0 auto;
}

body.login .form-control {
    position: relative;
    height: auto;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: 10px;
    font-size: 16px;
}
body.login .form-control:focus {
    z-index: 2;
}
body.login input[type="email"] {
    margin-bottom: -1px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}
body.login input[type="password"] {
    margin-bottom: 10px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}
body.login .login-error {
    max-width: 330px;
    margin: 0 auto;
}

.block .page-header {
    border-color: #ddd;
    border-width: 3px;
    margin-top: 20px;
}

